@@ -15,18 +15,26 @@
 
 import logging
 import re
-import thread
-import time
 import cx_Oracle
 from ZODB.POSException import StorageError
 
 from common import Adapter
 
 log = logging.getLogger("relstorage.adapters.oracle")
-use_inline_lobs = (cx_Oracle.version >= '5.0')
 
+def lob_handler(cursor, name, defaultType, size, precision, scale):
+    """cx_Oracle outputtypehandler that causes Oracle to send BLOBs inline.
 
-def inline(value):
+    Note that if a BLOB in the result is too large, Oracle generates an
+    error indicating truncation.  The execute_lob_stmt() method works
+    around this.
+    """
+    if defaultType == cx_Oracle.BLOB:
+        # Default size for BLOB is 4, we want the whole blob inline.
+        # Typical chunk size is 8132, we choose a multiple - 32528
+        return cursor.var(cx_Oracle.LONG_BINARY, 32528, cursor.arraysize)
+
+def read_lob(value):
     """Handle an Oracle LOB by returning its byte stream.
 
     Returns other objects unchanged.
@@ -34,55 +42,6 @@ def inline(value):
     if isinstance(value, cx_Oracle.LOB):
         return value.read()
     return value
-
-
-if use_inline_lobs:
-    def execute_lob_stmt(cursor, stmt, args=(), default=None):
-        """Execute a statement and return one row with all LOBs inline.
-
-        Returns the value of the default parameter if the result was empty.
-        """
-        try:
-            cursor.execute(stmt, args)
-            for row in cursor:
-                return row
-        except cx_Oracle.DatabaseError, e:
-            # ORA-01406: fetched column value was truncated
-            if not e.args[0].endswith(' 1406'):
-                raise
-            del cursor.outputtypehandler
-            try:
-                # Execute the query, but alter it slightly without
-                # changing its meaning, so that the query cache
-                # will see it as a statement that has to be compiled
-                # with different output type parameters.
-                cursor.execute(stmt + ' ', args)
-            finally:
-                cursor.outputtypehandler = lob_handler
-            for row in cursor:
-                return tuple(map(inline, row))
-        return default
-else:
-    def execute_lob_stmt(cursor, stmt, args=(), default=None):
-        """Execute a statement and return one row with all LOBs inline.
-
-        Returns the value of the default parameter if the result was empty.
-        """
-        cursor.execute(stmt, args)
-        for row in cursor:
-            return tuple(map(inline, row))
-        return default
-
-
-def lob_handler(cursor, name, defaultType, size, precision, scale):
-    """cx_Oracle outputtypehandler that causes Oracle to send BLOBs inline.
-
-    Note that if a BLOB in the result is too large, Oracle generates an
-    error indicating truncation.  The execute_lob_stmt() function works
-    around this.
-    """
-    if defaultType == cx_Oracle.BLOB:
-        return cursor.var(cx_Oracle.LONG_BINARY)
 
 
 class OracleAdapter(Adapter):
@@ -133,11 +92,30 @@ class OracleAdapter(Adapter):
             Adapter._scripts['prepack_follow_child_refs'],
     }
 
-    def __init__(self, user, password, dsn, twophase=False, arraysize=64):
-        self._params = (user, password, dsn)
-        self._twophase = twophase
-        self._arraysize = arraysize
+    def __init__(self, user, password, dsn, twophase=False, arraysize=64,
+            use_inline_lobs=None):
+        """Create an Oracle adapter.
 
+        The user, password, and dsn parameters are provided to cx_Oracle
+        at connection time.
+
+        If twophase is true, all commits go through an Oracle-level two-phase
+        commit process.  This is disabled by default.  Even when this option
+        is disabled, the ZODB two-phase commit is still in effect.
+
+        arraysize sets the number of rows to buffer in cx_Oracle.  The default
+        is 64.
+
+        use_inline_lobs enables Oracle to send BLOBs inline in response to
+        queries.  It depends on features in cx_Oracle 5.  The default is None,
+        telling the adapter to auto-detect the presence of cx_Oracle 5.
+        """
+        self._params = (user, password, dsn)
+        self._twophase = bool(twophase)
+        self._arraysize = arraysize
+        if use_inline_lobs is None:
+            use_inline_lobs = (cx_Oracle.version >= '5.0')
+        self._use_inline_lobs = bool(use_inline_lobs)
 
     def _run_script_stmt(self, cursor, generic_stmt, generic_params=()):
         """Execute a statement from a script with the given parameters.
@@ -159,13 +137,7 @@ class OracleAdapter(Adapter):
             params = ()
 
         try:
-            if use_inline_lobs:
-                del cursor.outputtypehandler
-            try:
-                cursor.execute(stmt, params)
-            finally:
-                if use_inline_lobs:
-                    cursor.outputtypehandler = lob_handler
+            cursor.execute(stmt, params)
         except:
             log.warning("script statement failed: %r; parameters: %r",
                 stmt, params)
@@ -356,8 +328,6 @@ class OracleAdapter(Adapter):
             conn = cx_Oracle.connect(*self._params, **kw)
             cursor = conn.cursor()
             cursor.arraysize = self._arraysize
-            if use_inline_lobs:
-                cursor.outputtypehandler = lob_handler
             if transaction_mode:
                 cursor.execute("SET TRANSACTION %s" % transaction_mode)
             return conn, cursor
@@ -433,6 +403,39 @@ class OracleAdapter(Adapter):
             return tid
         return None
 
+    def execute_lob_stmt(self, cursor, stmt, args=(), default=None):
+        """Execute a statement and return one row with all LOBs inline.
+
+        Returns the value of the default parameter if the result was empty.
+        """
+        if self._use_inline_lobs:
+            try:
+                cursor.outputtypehandler = lob_handler
+                try:
+                    cursor.execute(stmt, args)
+                    for row in cursor:
+                        return row
+                finally:
+                    del cursor.outputtypehandler
+            except cx_Oracle.DatabaseError, e:
+                # ORA-01406: fetched column value was truncated
+                error, = e
+                if ((isinstance(error, str) and not error.endswith(' 1406'))
+                        or error.code != 1406):
+                    raise
+                # Execute the query, but alter it slightly without
+                # changing its meaning, so that the query cache
+                # will see it as a statement that has to be compiled
+                # with different output type parameters.
+                cursor.execute(stmt + ' ', args)
+                for row in cursor:
+                    return tuple(map(read_lob, row))
+        else:
+            cursor.execute(stmt, args)
+            for row in cursor:
+                return tuple(map(read_lob, row))
+        return default
+
     def load_current(self, cursor, oid):
         """Returns the current pickle and integer tid for an object.
 
@@ -444,7 +447,8 @@ class OracleAdapter(Adapter):
             JOIN object_state USING(zoid, tid)
         WHERE zoid = :1
         """
-        return execute_lob_stmt(cursor, stmt, (oid,), default=(None, None))
+        return self.execute_lob_stmt(
+            cursor, stmt, (oid,), default=(None, None))
 
     def load_revision(self, cursor, oid, tid):
         """Returns the pickle for an object on a particular transaction.
@@ -457,7 +461,8 @@ class OracleAdapter(Adapter):
         WHERE zoid = :1
             AND tid = :2
         """
-        (state,) = execute_lob_stmt(cursor, stmt, (oid, tid), default=(None,))
+        (state,) = self.execute_lob_stmt(
+            cursor, stmt, (oid, tid), default=(None,))
         return state
 
     def exists(self, cursor, oid):
@@ -481,7 +486,7 @@ class OracleAdapter(Adapter):
                     AND tid < :tid
             )
         """
-        return execute_lob_stmt(cursor, stmt, {'oid': oid, 'tid': tid},
+        return self.execute_lob_stmt(cursor, stmt, {'oid': oid, 'tid': tid},
              default=(None, None))
 
     def get_object_tid_after(self, cursor, oid, tid):
@@ -633,7 +638,7 @@ class OracleAdapter(Adapter):
             JOIN current_object ON (temp_store.zoid = current_object.zoid)
         WHERE temp_store.prev_tid != current_object.tid
         """
-        return execute_lob_stmt(cursor, stmt)
+        return self.execute_lob_stmt(cursor, stmt)
 
     def move_from_temp(self, cursor, tid):
         """Move the temporarily stored objects to permanent storage.
